--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
